--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="search-box">
+            <form action="#" class="search-box">
                 <input type="text" id="city" placeholder="Enter location" required>
-                <button class="fa-solid fa-magnifying-glass" id="searchBtn"></button>
-            </div>
+                <button type="submit"  id="searchBtn"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </form>
         </div>
 
         <div class="location-not-found">
